@@ -1,5 +1,8 @@
 = 4.0.0b9 () =
 
+* Fixed the string representation of DOCTYPEs that have both a public
+  ID and a system ID.
+
 * Renamed Tag.nsprefix to Tag.prefix, for consistency with
   NamespacedAttribute.
 
